[package]
name = "meme-sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
starknet = "0.12.0"
url = "2.5.4"
reqwest = {version = "0.12.9", features=["json"]}
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
teloxide = "0.13.0"
serde = "1.0.216"
serde_json = "1.0.133"
dotenv = "0.15.0"
anyhow = "1.0.95"
apibara-core = { git = "https://github.com/apibara/dna", rev = "9caa385" }
apibara-sdk = { git = "https://github.com/apibara/dna", rev = "9caa385" }
kanshi = { git = "ssh://git@github.com/RougeDevs/kanshi.git", branch = "fix/integrate-dna", version = "0.1.0" }
