[package]
name = "meme-sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.5.4"
reqwest = {version = "0.12.9", features=["json"]}
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
teloxide = "0.13.0"
serde = "1.0.216"
serde_json = "1.0.133"
dotenv = "0.15.0"
anyhow = "1.0.95"
apibara-core = { git = "https://github.com/apibara/dna", rev = "9caa385" }
apibara-sdk = { git = "https://github.com/apibara/dna", rev = "9caa385" }
kanshi = { git = "ssh://git@github.com/RougeDevs/kanshi.git", branch = "fix/integrate-dna", version = "0.1.0" }
lazy_static = "1.4.0"
starknet-core = { git = "ssh://git@github.com/xJonathanLEI/starknet-rs.git", version = "0.12.1" }
starknet-contract = { git = "ssh://git@github.com/xJonathanLEI/starknet-rs.git", version = "0.12.0" }
starknet = "0.13.0"
num-bigint = "0.4.6"
hex = "0.4.3"
num-traits = "0.2.19"
thiserror = "2.0.11"
atomic = "0.6.0"
tracing = "0.1.41"
backtrace = "0.3.74"
