[package]
name = "meme-sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.5.4"
reqwest = {version = "0.12.12", features=["json"]}
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
teloxide = "0.13.0"
serde = "1.0.217"
serde_json = "1.0.135"
dotenv = "0.15.0"
anyhow = "1.0.95"
apibara-core = { git = "https://github.com/apibara/dna", rev = "9caa385" }
apibara-sdk = { git = "https://github.com/apibara/dna", rev = "9caa385" }
lazy_static = "1.5.0"
starknet-core = { git = "https://github.com/xJonathanLEI/starknet-rs.git", version = "0.12.1" }
starknet-contract = { git = "https://github.com/xJonathanLEI/starknet-rs.git", version = "0.12.0" }
starknet = "0.13.0"
num-bigint = "0.4.6"
hex = "0.4.3"
num-traits = "0.2.19"
thiserror = "2.0.11"
atomic = "0.6.0"
tracing = "0.1.41"
backtrace = "0.3.74"
num-integer = "0.1.46"
kanshi = { git = "https://github.com/RougeDevs/kanshi.git", branch = "dev", version = "0.1.0" }
rust_decimal = "1.36.0"
shuttle-runtime = "0.51.0"
shuttle-axum = "0.51.0"
axum = "0.8.1"
regex = "1.11.1"

